--- a/index.html
+++ b/index.html
@@ -262,13 +262,21 @@
             </form>
         </div>
 
-        <div id="view-archive" class="view">
-            <h1>Archivované zásilky (od 1.1.2026)</h1>
-            <button class="btn btn-blue" style="width: auto; margin-bottom: 20px;" onclick="app.showDashboard()">Zpět na hlavní stránku</button>
-            <div id="archived-shipments-list">
-                </div>
-        </div>
+<div id="view-archive" class="view">
+    <h1>Archivované zásilky (od 1.1.2026)</h1>
+    
+    <div style="display: flex; flex-wrap: wrap; gap: 15px; margin-bottom: 25px;">
+        <button class="btn btn-blue" style="margin: 0; padding: 0; border-radius: 4px; cursor: pointer; font-size: 1rem; display: inline-flex; align-items: center; justify-content: center; gap: 8px; font-family: sans-serif; font-weight: 600; border: none; height: 48px; width: 280px; background-color: #007bff; color: white;" onclick="app.showDashboard()">
+            <span>⬅</span> Zpět na hlavní stránku
+        </button>
 
+        <button type="button" onclick="window.location.href='https://nts-windows-tools.github.io/hledani-v-zasilkach-wfdrujbgz/'" style="background-color: #28a745; color: white; margin: 0; padding: 0; border-radius: 4px; cursor: pointer; font-size: 1rem; display: inline-flex; align-items: center; justify-content: center; gap: 8px; font-family: sans-serif; font-weight: 600; border: none; height: 48px; width: 280px;">
+            <span>🔍</span> Prohledávat všechny zásilky
+        </button>
+    </div>
+
+    <div id="archived-shipments-list"></div>
+</div>
     </div>
 
     <div id="modal-overlay" class="overlay">
