--- a/index.html
+++ b/index.html
@@ -919,7 +919,8 @@
                 "Balíkovna": "https://www.balikovna.cz/cs/sledovat-balik/-/balik/PLACEHOLDER",
                 "DPD": "https://www.dpdgroup.com/cz/mydpd/my-parcels/incoming?parcelNumber=PLACEHOLDER",
                 "PPL": "https://www.ppl.cz/vyhledat-zasilku?shipmentId=PLACEHOLDER",
-                "Česká pošta": "https://www.postaonline.cz/trackandtrace/-/zasilka/cislo?parcelNumbers=PLACEHOLDER"
+                "Česká pošta": "https://www.postaonline.cz/trackandtrace/-/zasilka/cislo?parcelNumbers=PLACEHOLDER",
+                "One by Allegro / WE|DO": "https://onedelivery.cz/sledovani-zasilky?numer=PLACEHOLDER"
             };
 
             if (trackingMap[item.carrier]) {
