--- a/index.html
+++ b/index.html
@@ -920,7 +920,8 @@
                 "DPD": "https://www.dpdgroup.com/cz/mydpd/my-parcels/incoming?parcelNumber=PLACEHOLDER",
                 "PPL": "https://www.ppl.cz/vyhledat-zasilku?shipmentId=PLACEHOLDER",
                 "Česká pošta": "https://www.postaonline.cz/trackandtrace/-/zasilka/cislo?parcelNumbers=PLACEHOLDER",
-                "One by Allegro / WE|DO": "https://onedelivery.cz/sledovani-zasilky?numer=PLACEHOLDER"
+                "One by Allegro / WE|DO": "https://onedelivery.cz/sledovani-zasilky?numer=PLACEHOLDER",
+                "Alza": "https://alza.cz/my-account/order-details-PLACEHOLDER.htm"
             };
 
             if (trackingMap[item.carrier]) {
@@ -1009,3 +1010,4 @@
     </script>
 </body>
 </html>
+
